add optional parameter on API side
